--- a/public/style/footer.module.css
+++ b/public/style/footer.module.css
@@ -100,3 +100,21 @@
     color: #ffffff;
     margin:0px;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .foBg_black {
+        padding: 40px 30px;
+    }
+    .foBg_black .ct2 ul {
+        padding: 20px 0px 10px 0px;
+        list-style: disc;
+        margin-bottom: 0px;
+    }
+    .foBg_black .ct3 {
+        padding: 20px 0px 0px;
+    }
+    .foBg_black .form button {
+        margin-left: 15px;
+    }
+}
