--- a/public/style/profile.module.css
+++ b/public/style/profile.module.css
@@ -1,14 +1,67 @@
 .container {
   padding: 40px;
   background: #ffffff;
-  background-image: url('/icon/signup/bg.svg');
+  background-image: url("/icon/signup/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .profile {
   background: #ffffff;
-  padding: 20px;
+  padding: 40px;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+.picture_text {
+  padding-top: 10px;
+}
+
+.picture_text h4 {
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.94px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: rgba(21, 21, 21, 1);
+}
+
+.picture_text p {
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14.52px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: rgba(115, 115, 115, 1);
+}
+
+.btnChoosePhoto {
+  padding: 6px 10px 8px 10px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14.52px;
+  border-radius: 5px;
+  background: rgba(21, 21, 21, 1);
+  color: rgba(255, 255, 255, 1);
+}
+
+.btnRemove{
+  font-family: Inter;
+  margin-left: 10px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14.52px;
+  text-align: left;
+  border: 0px;
+  border-radius: 0px;
+  background: none;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: rgba(115, 115, 115, 1);  
 }
 
 .title {
@@ -53,19 +106,62 @@
   width: 100%;
 }
 
+.profile_form select {
+  border: 1px solid #d9d9d9;
+  padding: 7px 13px 7px 13px;
+  gap: 10px;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.profile_form textarea {
+  border: 1px solid #d9d9d9;
+  padding: 7px 13px 7px 13px;
+  gap: 10px;
+  border-radius: 5px;
+  width: 100%;
+}
+
 .submitBtn {
-  margin: 20px 0px 15px;
-  border: 0px;
+  display: flex;
+  width: auto;
   padding: 7px 16px 7px 16px;
   gap: 10px;
   border-radius: 8px;
-  background-color: #d70000;
-  color: #ffffff;
+  opacity: 0px;
+  background-color: rgba(215, 0, 0, 1);    
+  border: 0px;
+  color: rgba(255, 255, 255, 1);
   font-family: Inter;
   font-size: 14px;
   font-weight: 600;
-  width: 100%;
+  line-height: 15.73px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  margin-right: 10px;
 }
+
+.cancelBtn {
+  margin-left: auto;
+  display: flex;
+  width: auto;
+  vertical-align: middle;
+  align-self: center;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14.52px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  text-align: right;
+  border: 0px;
+  border-radius: 0px;
+  background: none;
+  color: rgba(115, 115, 115, 1);  
+}
+
 
 .alreadyAcc {
   font-family: Inter;
@@ -78,61 +174,63 @@
   color: #666666;
 }
 
-.alreadyAcc a{
-    font-weight: bold;
-    font-size: 14px;
+.alreadyAcc a {
+  font-weight: bold;
+  font-size: 14px;
 }
 
 .rowOR {
-    border-top: 2px solid rgba(217, 217, 217, 1);
+  border-top: 2px solid rgba(217, 217, 217, 1);
 }
 
 .rowOR h3 {
-    background: #ffffff;
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 14.52px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    width: auto;
-    margin: -10px auto 0px auto;
+  background: #ffffff;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 14.52px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  width: auto;
+  margin: -10px auto 0px auto;
 }
 
-.googleBtn, .facebookBtn, .appleBtn{
-    padding: 12px 10px 12px 12px;
-    gap: 8px;
-    border-radius: 5px;
-    border: 1px solid rgba(217, 217, 217, 1);
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 500;
-    background-color: #ffffff;
-    line-height: 14.52px;
-    text-align: left;
-    padding-left: 35%;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: rgba(21, 21, 21, 1);
-    width: 100%;
+.googleBtn,
+.facebookBtn,
+.appleBtn {
+  padding: 12px 10px 12px 12px;
+  gap: 8px;
+  border-radius: 5px;
+  border: 1px solid rgba(217, 217, 217, 1);
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: #ffffff;
+  line-height: 14.52px;
+  text-align: left;
+  padding-left: 35%;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: rgba(21, 21, 21, 1);
+  width: 100%;
 }
 
 .image {
-    margin: -3px 5px 0px;
+  margin: -3px 5px 0px;
 }
 
-.info h3{
-    font-family: Inter;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 14.52px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: rgba(0, 0, 0, 1);    
-    padding-left: 15%;
+.info h3 {
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 14.52px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: rgba(0, 0, 0, 1);
+  padding-left: 15%;
 }
 
 .info img {
-    padding: 0px 3px 3px 0px;
+  padding: 0px 3px 3px 0px;
 }
