--- a/public/style/navbar.module.css
+++ b/public/style/navbar.module.css
@@ -126,7 +126,7 @@
   border-radius: 10px;
   background-position: top;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 .casinoTitle {
