--- a/public/style/blogs.module.css
+++ b/public/style/blogs.module.css
@@ -1,60 +1,86 @@
-.newsSection{
-    background: #D70000;
-    text-align: center;
-    padding: 20px;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 42px;
-    font-weight: 600;
-    margin-top: 30px;
-    margin-bottom: 40px;
-    margin-left: 50px !important;
-    margin-right: 50px !important;
+.newsSection {
+  background: #d70000;
+  text-align: center;
+  padding: 20px;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 42px;
+  font-weight: 600;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  margin-left: 50px !important;
+  margin-right: 50px !important;
 }
-.BlogSec{
-    margin-left: 50px !important;
-    margin-right: 50px !important;
-    margin-top: 50px !important;
+.blogSection {
+  margin-left: 50px !important;
+  margin-right: 50px !important;
+  margin-top: 50px !important;
 }
-.xblogTag {
-    background: #ffe5e5;
-    color: #d70000;
-    font-size: 14px;
-    padding: 10px;
-    border-radius: 50px;
-    margin-top: 10px;
-  }
+
 .blogTag {
-    background: #ffe5e5;
-    color: #d70000;
-    font-size: 14px;
-    padding: 10px;
-    border-radius: 50px;
-    margin-left: 10px;
-    margin-top: 10px;
+  background: #ffe5e5;
+  color: #d70000;
+  font-size: 14px;
+  padding: 10px;
+  border-radius: 50px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+.featureBtn {
+  background: #d70000;
+  padding: 10px 20px 10px 20px;
+  color: #ffff;
+  border-radius: 50px;
+  margin-top: 20px;
+  border: none;
+}
+.blogTitle {
+  font-size: 37px;
+  font-weight: 600;
+}
+.blogTextSec {
+  width: 70%;
+}
+.blogDesc {
+  font-size: 15px;
+  line-height: 32px;
+  letter-spacing: 0.8px;
+  color: #1a1a1a;
+  padding-top: 20px;
+  margin-bottom: 5px;
+}
+.blogImgSection {
+  padding: 0px 10px;
+}
+
+.blogImg {
+  width: -webkit-fill-available;
+  height: 250px;
+}
+.arrowImg {
+  margin-left: auto;
+  display: block;
+}
+.topSpace {
+  margin-top: 150px;
+}
+
+@media only screen and (max-width: 600px) {
+  .newsSection{
+    padding: 40px 20px;
+    margin: 0px !important;
   }
-  .featureBtn {
-    background: #d70000;
-    padding: 10px 20px 10px 20px;
-    color: #ffff;
-    border-radius: 50px;
-    margin-top: 5px;
-    border: none;
+  .blogSection {
+    margin: 10px !important;
   }
-  .blogTitle {
-    font-size: 37px;
-    font-weight: 600;
+  .blogImg {
+    width: -webkit-fill-available;
   }
-  .blogTextSec{
-    width:60%;
+  .blogImgSection {
+    padding: 10px 20px;
   }
-  .blogDesc{
-    font-size: 15px;
-    line-height: 32px;
-    letter-spacing: 0.8px;
-    color: #1A1A1A;
-    padding-top: 20px;
+  .blogTextSec {
+    width: 100%;
   }
-  .topSpace{
-    margin-top:150px;
-  }
+
+}
