--- a/public/style/navbar.module.css
+++ b/public/style/navbar.module.css
@@ -81,7 +81,6 @@
 
 .brandTitleDiv {
   margin-top: 30px !important;
-  padding-left: 32px !important;
 }
 
 .brandTitle {
@@ -120,8 +119,8 @@
 }
 
 .casinoBanner {
-  height: 748px;
-  margin: 0 6px 30px 60px;
+  height: 650px;
+  margin: 50px 6px 0px 60px;
   background-image: url("/casinoBanner.svg");
   border-radius: 10px;
   background-position: top;
@@ -148,7 +147,7 @@
 }
 
 .casinoBlog {
-  margin: 0 60px 30px 60px;
+  margin: 0 60px 40px 60px;
 }
 .blogSubTitle {
   font-size: 14px;
@@ -166,7 +165,7 @@
   font-size: 14px;
   padding: 10px;
   border-radius: 50px;
-  margin-left: 10px;
+  margin-right: 10px;
   margin-top: 10px;
 }
 .blogMainTitle {
@@ -176,15 +175,30 @@
 .blogBtn {
   float: right;
   background: transparent;
-  padding: 10px 20px;
+  padding: 10px 0px 0px 0px;
   color: black;
   border-radius: 50px;
-  margin-top: 40px;
+  margin-top: 50px;
   border: none;
-  margin-right: 20px;
+}
+
+.blogSection {
+  padding: 10px;
+}
+
+.blogImg {
+  width: -webkit-fill-available;
+  height: 250px;
+}
+.arrowImg{
+  margin-left: auto;
+  display: block;
 }
 
 @media only screen and (max-width: 600px) {
+  .tooltip {
+    display: none !important;
+  }
   .col {
     text-align: left;
     padding: 2px 10px;
@@ -224,6 +238,7 @@
     margin: 0px;
     height: 600px;
     padding: 20px 30px;
+    background-size: cover;
   }
   .casinoTitle {
     padding-top: 80px;
