--- a/public/style/news.module.css
+++ b/public/style/news.module.css
@@ -1,27 +1,30 @@
 .casinoBlog {
-    margin: 0 60px 30px 60px;
-  }
-  .blogSubTitle {
-    font-size: 14px;
-    color: #d70000;
-    padding-top: 25px;
-    font-weight: 600;
-  }
-  .blogTitle {
-    font-size: 24px;
-    font-weight: 600;
-  }
-  .blogTag {
-    background: #ffe5e5;
-    color: #d70000;
-    font-size: 14px;
-    padding: 10px;
-    border-radius: 50px;
-    margin-left: 10px;
-    margin-top: 10px;
-  }
+  margin: 0 60px 40px 60px;
+}
+.blogSubTitle {
+  font-size: 14px;
+  color: #d70000;
+  padding-top: 25px;
+  font-weight: 600;
+}
+.blogTitle {
+  font-size: 24px;
+  font-weight: 600;
+}
+.blogTag {
+  background: #ffe5e5;
+  color: #d70000;
+  font-size: 14px;
+  padding: 10px;
+  border-radius: 50px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
   .brandTitleDiv {
     margin-top: 30px !important;
+  }
+  .brandSubTitleDiv {
+    margin-top: 20px !important;
   }
   .blogMainTitle {
     font-size: 42px;
@@ -34,33 +37,48 @@
   .blogBtn {
     float: right;
     background: transparent;
-    padding: 10px 20px;
+    padding: 10px 0px 0px 0px;
     color: black;
     border-radius: 50px;
-    margin-top: 40px;
+    margin-top: 20px;
     border: none;
-    margin-right: 20px;
+  }
+  .blogSection {
+    padding: 10px;
+  }
+  
+  .blogImg {
+    width: -webkit-fill-available;
+    height: 250px;
+  }
+  .arrowImg{
+    margin-left: auto;
+    display: block;
   }
   .topSpace{
     margin-top:150px;
   }
   @media only screen and (max-width: 600px) {
     .casinoBlog {
-        margin: 0px 20px 20px;
-      }
-      .blogBtn {
-        float: none;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-        margin-top: 0px;
-      }
-    
-      .blogImg{
-        width: -webkit-fill-available;
-      }
-      .blogSection{
-        padding: 10px 20px;
-      }
+      margin: 0px 20px 20px;
+    }
+    .brandSubTitleDiv{
+      float: none;
+      text-align: center;
+    }
+    .blogBtn {
+      float: none;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      margin-top: 0px;
+    }
+  
+    .blogImg{
+      width: -webkit-fill-available;
+    }
+    .blogSection{
+      padding: 10px 20px;
+    }
     }
