--- a/public/style/signIn.module.css
+++ b/public/style/signIn.module.css
@@ -9,11 +9,14 @@
 .signin {
   background: #ffffff;
   padding: 20px;
-  border: 2px solid white;
+  border: 1px solid #fafafa;
   border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;  
 }
 
 .title {
+  padding: 20px 0px;
   font-family: Inter;
   font-size: 32px;
   font-weight: 700;
@@ -140,4 +143,12 @@
   color: rgba(0, 0, 0, 1);
   width: auto;
   margin-left: auto;
+}
+
+@media only screen and (max-width: 600px) {
+  .googleBtn,
+  .facebookBtn,
+  .appleBtn {
+    padding-left: 15%;
+  }
 }
