--- a/public/style/signUp.module.css
+++ b/public/style/signUp.module.css
@@ -9,8 +9,10 @@
 .signup {
   background: #ffffff;
   padding: 20px;
-  border: 2px solid white;
-  border-radius: 10px;  
+  border: 1px solid #fafafa;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;  
 }
 
 .title {
@@ -137,4 +139,19 @@
 
 .info img {
     padding: 0px 3px 3px 0px;
+}
+
+@media only screen and (max-width: 600px) {
+  .title {
+    padding: 20px 0px;
+  }
+  .googleBtn,
+  .facebookBtn,
+  .appleBtn {
+    padding-left: 15%;
+  }
+  .info h3{
+    padding-top: 10px;
+    padding-left: 5%;
+  }
 }
