--- a/public/style/casino.module.css
+++ b/public/style/casino.module.css
@@ -28,6 +28,7 @@
     background: #F9F9F9;
     text-align: center;
     border-radius: 20px;
+    margin-top: 40px;
 }
 
 .casinoTitle {
@@ -36,12 +37,20 @@
     font-weight: 900;
     padding-top: 15%;
 }
-
+.casinobg{
+    background-image: url("/detail_bg.svg");
+  background-position: top;
+  background-repeat: repeat;
+  background-size: cover;
+}
+.topSpace{
+    margin-top:150px;
+  }
 .casinobtn {
     background: #d70000;
     font-size: 14px;
     color: #fff;
-    padding: 10px 15px;
+    padding: 6px 5px;
     width: 71%;
     border: none;
     border-radius: 50px;
@@ -53,7 +62,7 @@
 }
 
 .casinoCardRow {
-    margin: 20px 70px;
+    margin: 20px 50px;
 }
 
 .wizardRating {
@@ -71,13 +80,12 @@
     font-size: 27px;
     font-weight: 700;
     padding-top: 40px;
-    padding-bottom: 20px;
 }
 
 .cardPrice {
     border: 1px solid #D9D9D9;
     margin: 20px 58px;
-    padding: 30px;
+    padding: 15px;
     border-radius: 5px;
     font-size: 14px;
     font-weight: 600;
@@ -102,4 +110,36 @@
     width: 71%;
     border: none;
     border-radius: 50px;
+}
+@media only screen and (max-width: 600px) {
+    .mainSection{
+        margin: 0px 15px;
+    }
+    .stakeImg{
+        width: -webkit-fill-available;
+    }
+    .casinoTitle{
+        color: #fff;
+    font-size: 30px;
+    font-weight: 900;
+    padding-top: 31%;
+    }
+    .casinobtn{
+        font-size: 11px;
+    }
+    .ratingTitle{
+        font-size: 20px;
+    }
+    .cardPrice{
+        margin: 20px 26px;
+    }
+    .visitCasinoBtn{
+        width: 85%;
+    }
+    .reviewCasinoBtn{
+        width: 85%;
+    }
+    .card2{
+        margin-top: 20px;
+    }
 }
