set UI change according to new requirement and set form validation on signup page

--- a/public/style/footer.module.css
+++ b/public/style/footer.module.css
@@ -117,4 +117,9 @@
     .foBg_black .form button {
         margin-left: 15px;
     }
+
+    .foBg_black { display: flex; flex-direction: column; }
+    .ct1 { order: 1; }
+    .ct2 { order: 3; }
+    .ct3 { order: 2; }
 }
