--- a/public/style/signIn.module.css
+++ b/public/style/signIn.module.css
@@ -105,8 +105,7 @@
   font-weight: 500;
   background-color: #ffffff;
   line-height: 14.52px;
-  text-align: left;
-  padding-left: 35%;
+  text-align: center;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   color: rgba(21, 21, 21, 1);
