--- a/public/style/signUp.module.css
+++ b/public/style/signUp.module.css
@@ -113,8 +113,7 @@
     font-weight: 500;
     background-color: #ffffff;
     line-height: 14.52px;
-    text-align: left;
-    padding-left: 35%;
+    text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: rgba(21, 21, 21, 1);
@@ -134,7 +133,6 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: rgba(0, 0, 0, 1);    
-    padding-left: 15%;
 }
 
 .info img {
