--- a/public/style/navbar.module.css
+++ b/public/style/navbar.module.css
@@ -1,3 +1,6 @@
+.d-block {
+  display: block !important;
+}
 .tooltip {
   background-color: #d70000;
   padding: 15px 30px 15px 30px;
@@ -14,7 +17,7 @@
   margin: 20px 50px 20px 50px !important;
 }
 
-.signUp {
+.signUp, .signProfile {
   background-color: #151515;
   border-radius: 50px;
   color: white;
@@ -26,7 +29,7 @@
   font-family: Inter;
 }
 
-.signIn {
+.signIn, .signOut {
   background-color: #ffffff;
   border-radius: 50px;
   color: #151515;
@@ -73,7 +76,7 @@
   .header {
     margin: 10px !important;
   }
-  .signUp {
+  .signUp, .signProfile {
     margin-left: 0px;
   }
   .searchInput {
