--- a/public/style/blog_detail.module.css
+++ b/public/style/blog_detail.module.css
@@ -4,10 +4,12 @@
   padding-top: 25px;
   font-weight: 600;
 }
+
 .blogTitle {
   font-size: 20px;
   font-weight: 600;
 }
+
 .blogDesc {
   font-size: 15px;
   line-height: 32px;
@@ -15,6 +17,7 @@
   color: #1a1a1a;
   padding-top: 20px;
 }
+
 .detailWidth {
   width: 75%;
   margin-left: 12%;
@@ -23,6 +26,7 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+
 .socialList {
   background: #d70000;
   padding: 10px;
@@ -31,21 +35,47 @@
   margin-top: 40px;
   margin-bottom: 20px;
 }
+
+.textareaField {
+  width: 100%;
+  border-radius: 10px;
+  height: 100px;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #D9D9D9;
+}
+
+.textareaBtn {
+  float: right;
+  background: black;
+  color: white;
+  padding: 5px 20px;
+  border-radius: 50px;
+  font-size: 14px;
+  position: relative;
+  top: -50px;
+  right: 20px;
+}
+
 .listText {
   padding-top: 10px;
 }
+
 .socialIcon {
   float: right;
   margin-top: 9px;
   margin-right: 10px;
 }
+
 .brandTitleDiv {
   margin-top: 30px !important;
 }
+
 .commentMainTitle {
   font-size: 19px;
   font-weight: 600;
 }
+
 .commentBtn {
   float: right;
   background: none;
@@ -55,23 +85,28 @@
   margin-top: 19px;
   border: none;
 }
+
 .commentTitleDiv {
   margin-top: 30px !important;
   padding-left: 32px !important;
 }
+
 .mainDev {
   margin-top: 25px;
 }
+
 .commentHead {
   font-size: 15px;
   font-weight: 500;
   padding-left: 10px;
 }
+
 .commentTime {
   font-size: 11px;
   color: #737373;
   padding-left: 5px;
 }
+
 .commentParagh {
   font-size: 13px;
   line-height: 20px;
@@ -82,6 +117,7 @@
 .casinoBlog {
   margin: 0 60px 40px 60px;
 }
+
 .blogTag {
   background: #ffe5e5;
   color: #d70000;
@@ -91,6 +127,7 @@
   margin-right: 10px;
   margin-top: 10px;
 }
+
 .blogSection {
   padding: 0px 10px;
 }
@@ -99,31 +136,39 @@
   width: -webkit-fill-available;
   height: 250px;
 }
+
 .arrowImg {
   margin-left: auto;
   display: block;
 }
+
 .topSpace {
   margin-top: 150px;
 }
+
 @media only screen and (max-width: 600px) {
-  .heroImg{
+  .heroImg {
     width: -webkit-fill-available;
     height: auto;
   }
-  .detailWidth{
+
+  .detailWidth {
     margin: 20px;
     width: auto;
   }
-  .commentTitleDiv{
+
+  .commentTitleDiv {
     padding: 10px !important;
   }
+
   .casinoBlog {
     margin: 0px 20px 20px;
   }
+
   .blogImg {
     width: -webkit-fill-available;
   }
+
   .blogSection {
     padding: 10px 20px;
   }
