--- a/public/style/newsandblogs.module.css
+++ b/public/style/newsandblogs.module.css
@@ -21,16 +21,16 @@
   margin-top: 10px;
 }
 .blogMainTitle {
-  font-size: 42px;
+  font-size: 35px;
   font-weight: 700;
 }
 .blogBtn {
   float: right;
-  background: transparent;
-  padding: 10px 0px 0px 0px;
-  color: black;
+  background: none;
+  padding: 0px 0 0;
+  color: #000;
   border-radius: 50px;
-  margin-top: 50px;
+  margin-top: 25px;
   border: none;
 }
 
